--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 # This file lists all individuals having contributed content to the repository.
 # If you're submitting a patch, please add your name here in alphabetical order as part of the patch.
 #
+Mischa Taylor <mischa@misheska.com>
+Moujan Anna <moujan@annawake.com>
 Rickard von Essen <rickard.von.essen@gmail.com>
